fixed little misdisplace of buttons that happened once they had text inside

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     </div>
     <div>
        @for(row of [0,1,2]; track row) {
-        <div>
+        <div class="cell-container">
           @for(column of [0,1,2]; track column) {
             <button
               type="button"
